microservices-consul-k8/order.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      run: order
  strategy: {}
  template:
    metadata:
      labels:
        run: order
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/service-meta-version: "1"
        consul.hashicorp.com/service-tags: "v1"

    spec:
      serviceAccountName: order
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-order:latest
        name: order
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: order
  name: order
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: order
  type: ClusterIP
