microservices-consul-k8/api-gateway-http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-root-demo-app
  namespace: demo-app
spec:
  parentRefs:
  - name: demo-api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: apache
      port: 80
